# cpp-arduino-game-controller

./: README.md
docs/: protocol.md
firmware/: game_controller.ino
hardware/: README.md
pc-client/: CMakeLists.txt
pc-client/src/: GamepadState.h  KeyboardMapper.cpp  KeyboardMapper.h  SerialClient.cpp  SerialClient.h  main.cpp
